Fixed event card column sizing in mobile
Fixed event card column sizing on mobile by redusing the size of the grid columns and redusing the number of columns from 3 to 2.

Used to look too big and overflow outside of card or be obscured and cutoff when inside dropdown

--- a/css/events.css
+++ b/css/events.css
@@ -129,6 +129,10 @@
         margin: .2em 0 ;
     }
 
+    .event-details{
+        grid-template-columns: repeat(2, 11em)
+    }
+
     .event-location{
         grid-column-start: 1;
         grid-column-end: 2;
